# pmaker

./: README.md  pmaker.py
files/: CMakeLists.txt  main.c
files/modules/: CMakeLists.txt  boost.txt  glsdk.txt  librocket.txt  opengl.txt  sfml.txt
files/modules/c_cpp/: boost.txt  glsdk.txt  header.h  header.hpp  main.c  main.cpp  pthreads.txt  sfml.txt
