CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 1)
SET(VERSION_UP 0)

SET(PROJ_NAME __projxxxname__)
SET(EXEC_NAME "${PROJ_NAME}")

PROJECT(${PROJ_NAME})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)

#USECPP11#
#USEC99#
#USEC11#

FILE(GLOB_RECURSE HDRS "${PROJECT_SOURCE_DIR}/inc/*.hpp" "${PROJECT_SOURCE_DIR}/inc/*.h")
FILE(GLOB_RECURSE SRCS "${PROJECT_SOURCE_DIR}/src/*.cpp" "${PROJECT_SOURCE_DIR}/inc/*.c")

SET(EXECUTABLE_NAME ${EXEC_NAME})
ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SRCS} ${HDRS})
SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/../bin)

SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES DEBUG_POSTFIX _d)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../cmk" ${CMAKE_MODULE_PATH})

#USESFML#
#USEOPENGL#
#USEGLSDK#
#USEBOOST#
#USELIBROCKET#
